тз 11 правки